--- a/login.html
+++ b/login.html
@@ -15,19 +15,16 @@
                 <div class="input-box">
                     <input id="userName" type="text" placeholder="username" required>
                     <i class='bx bxs-user'></i>
+                    <p class="forgot"> <a href="#">Forgot username?</a></p>
                 </div>
                 <div class="input-box">
                     <input id="password" type="password" placeholder="password" required>
                     <i class='bx bxs-lock-alt'></i>
+                    <p class="forgot"> <a href="#">Forgot password?</a></p>
                 </div>
-                
-                <!--<div class="remember-forgot">
-                    <label><input type="checkbox">Remember Me</label>
-                    <a href="#">Forgot Password?</a>
-                </div> -->
                 <button type="button" class="btn" onclick="loginUser()">Login</button>
                     <p id="error-message" style="color: red;"></p>
-                    <p>Don't have an account? <a href="#">Click here</a></p>
+                    <p class="register-link">Don't have an account? <a href="register.html">Click here</a></p>
                 </div>
             </form>
         </div>
