--- a/admin/admin.html
+++ b/admin/admin.html
@@ -20,7 +20,12 @@
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
-    </div>  
+    </div> 
+    <div class="main">
+        <button class="main-btn">Class</button>
+        <button class="main-btn">Professor</button>
+        <button class="main-btn">Student</button>
+    </div> 
       
       <script src="admin.js"></script> 
 </body>
