--- a/login/login.html
+++ b/login/login.html
@@ -24,7 +24,7 @@
                 </div>
                 <button type="button" class="btn" onclick="loginUser()">Login</button>
                     <p id="error-message" style="color: red;"></p>
-                    <p class="register-link">Don't have an account? <a href="register.html">Click here</a></p>
+                    <p class="register-link">Don't have an account? <a href="">Click here</a></p>
                 </div>
             </form>
         </div>
