--- a/professor/professor.html
+++ b/professor/professor.html
@@ -20,7 +20,12 @@
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
-    </div>    
+    </div>   
+    <div class="main">
+        <button class="main-btn">add here</button>
+        <button class="main-btn">add here</button>
+        <button class="main-btn">add here</button>
+    </div>  
       <script src="professor.js"></script> 
 </body>
 </html>
