logout btn gos to homepage

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -17,9 +17,14 @@
         </div>
     </div>
     <div id="myDropdown" class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="#">Admin</a>
+        <a href="#">Class</a>
+        <a href="#">Professor</a>
+        <a href="#">Student</a>
+        <a href="../login/login.html" class="logout">
+            <i class='bx bx-log-out'></i> Logout
+        </a>
+        
     </div> 
     <div class="main">
         <button class="main-btn">Class</button>
