--- a/student/student.html
+++ b/student/student.html
@@ -20,6 +20,9 @@
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
+        <a href="../login/login.html" class="logout">
+            <i class='bx bx-log-out'></i> Logout
+        </a>
     </div>
     <div class="main">
         <button class="main-btn">add here</button>
