admin class and professor page

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -27,8 +27,8 @@
         
     </div> 
     <div class="main">
-        <button class="main-btn">Class</button>
-        <button class="main-btn">Professor</button>
+        <button class="main-btn" onclick="window.location.href='class_admin.html'">Class</button>
+        <button class="main-btn" onclick="window.location.href='professor_admin.html'">Professor</button>
         <button class="main-btn" onclick="window.location.href='student_admin.html'">Student</button>
     </div> 
       
