--- a/admin/professor_admin.html
+++ b/admin/professor_admin.html
@@ -29,7 +29,7 @@
         
     </div> 
     <div class="searchBar">
-        <input id="userName" type="text" placeholder="Search for a Student " required>
+        <input id="userName" type="text" placeholder="Search for a Professor " required>
         <button>Search</button>
         <button id="filter">
             <i class='bx bxs-chevron-down'></i>
