--- a/admin/admin.html
+++ b/admin/admin.html
@@ -32,6 +32,6 @@
         <button class="main-btn" onclick="window.location.href='student_admin.html'">Student</button>
     </div> 
       
-      <script src="admin.js"></script> 
+      <script src="welcome_admin.js"></script> 
 </body>
 </html>
