--- a/admin/student_admin.html
+++ b/admin/student_admin.html
@@ -42,11 +42,11 @@
         <div class="filter-section">
             <h4>Year:</h4>
             <div class="checkbox-group">
-                <label><input type="checkbox"> 1</label>
-                <label><input type="checkbox"> 2</label>
-                <label><input type="checkbox"> 3</label>
-                <label><input type="checkbox"> 4</label>
-                <label><input type="checkbox"> Other</label>
+                <label><input id="year1" type="checkbox" value="1"> 1</label>
+                <label><input id="year2" type="checkbox" value="2"> 2</label>
+                <label><input id="year3" type="checkbox" value="3"> 3</label>
+                <label><input id="year4" type="checkbox" value="4"> 4</label>
+                <label><input id="year5" type="checkbox" value="5"> Other</label>
             </div>
         </div>
     
