three dots and add student button

--- a/admin/student_admin.html
+++ b/admin/student_admin.html
@@ -77,6 +77,11 @@
             <tbody id="studentTableBody">
                 <!-- Student data will be inserted here -->
             </tbody>
+            <tr>
+                <td colspan="2" style="text-align: center;">
+                    <button class="addStudent">Add student</button> 
+                </td>
+            </tr> 
         </table>
     </div>
 
