UI of add student

--- a/admin/student_admin.html
+++ b/admin/student_admin.html
@@ -40,7 +40,7 @@
         
     
         <div class="filter-section">
-            <h4>Year:</h4>
+            <p>Year:</p>
             <div class="checkbox-group">
                 <label><input id="year1" type="checkbox" value="1"> 1</label>
                 <label><input id="year2" type="checkbox" value="2"> 2</label>
