edit student dropdown

--- a/admin/student_admin.html
+++ b/admin/student_admin.html
@@ -56,7 +56,11 @@
         </div>
     </div>
     
-
+    <div id="studentDropdown" class="dropdown-content">
+        <div class="editStudent"><p>Edit student</p></div>
+        <div class="deleteStudent"><p>Delete student</p></div>
+    </div>
+    
     <div class="searchBar">
         <input id="searchInput" type="text" placeholder="Search for a Student" required>
         <button>Search</button>
