--- a/admin/student_admin.html
+++ b/admin/student_admin.html
@@ -57,8 +57,8 @@
     </div>
     
     <div id="studentDropdown" class="dropdown-content">
-        <div class="editStudent"><p>Edit student</p></div>
-        <div class="deleteStudent"><p>Delete student</p></div>
+        <div class="editStudent"><button>Edit student</button></div>
+        <div><button class="deleteStudent">Delete student</button></div>
     </div>
     
     <div class="searchBar">
