professor page and get professor

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -18,8 +18,8 @@
     </div>
     <div id="myDropdown" class="dropdown-content">
         <a href="#">Admin</a>
-        <a href="#">Class</a>
-        <a href="#">Professor</a>
+        <a href="class_admin.html">Class</a>
+        <a href="professor_admin.html">Professor</a>
         <a href="student_admin.html">Student</a>
         <a href="../login/login.html" class="logout">
             <i class='bx bx-log-out'></i> Logout
