--- a/admin/professor_admin.html
+++ b/admin/professor_admin.html
@@ -99,7 +99,7 @@
             </tbody>
             <tr>
                 <td colspan="2" style="text-align: center;">
-                    <button class="addStudent">Add Professor</button> 
+                    <button class="addProfessor">Add Professor</button> 
                 </td>
             </tr> 
         </table>
