filter by salary

--- a/admin/professor_admin.html
+++ b/admin/professor_admin.html
@@ -31,7 +31,7 @@
     <div id="filterDropdown" class="dropdown-content">
         <div class="filter-section">
             <label for="Salary">Salary:</label>
-            <input id="Salary" type="number" placeholder="Enter Salary" required>
+            <input id="salaryInput" type="number" placeholder="Enter Salary" required>
             <div class="checkbox-group">
                 <label><input id="Above" type="checkbox" onclick="toggleCheckMenu(this)"> Above</label>
                 <label><input id="Below" type="checkbox" onclick="toggleCheckMenu(this)"> Below</label>
