--- a/admin/professor_admin.html
+++ b/admin/professor_admin.html
@@ -48,8 +48,8 @@
         </div>
         
         <div class="filter-section">
-            <label for="major">Department:</label>
-            <input id="major" type="text" placeholder="Enter Department" required>
+            <label>Department:</label>
+            <input id="departmentInput" type="text" placeholder="Enter Department" required>
         </div>
 
         <div class="filter-section">
