--- a/admin/professor_admin.html
+++ b/admin/professor_admin.html
@@ -73,8 +73,8 @@
     </div>
     
     <div id="studentDropdown" class="dropdown-content">
-        <div class="editStudent"><button>Edit student</button></div>
-        <div><button class="deleteStudent">Delete student</button></div>
+        <div><button class="editProfessor">Edit Professor</button></div>
+        <div><button class="deleteProfessor">Delete Professor</button></div>
     </div>
     
     <div class="searchBar">
