search class name

--- a/admin/class_admin.html
+++ b/admin/class_admin.html
@@ -29,7 +29,7 @@
         
     </div> 
     <div class="searchBar">
-        <input id="userName" type="text" placeholder="Search for a Class " required>
+        <input id="searchInput" type="text" placeholder="Search for a Class " required>
         <button>Search</button>
         <button id="filter">
             <i class='bx bxs-chevron-down'></i>
@@ -88,14 +88,14 @@
             </tbody>
             <tr>
                 <td colspan="2" style="text-align: center;">
-                    <button class="addStudent">Add student</button> 
+                    <button class="addStudent">Add Class</button> 
                 </td>
             </tr> 
         </table>
     </div>
 
     <script src="admin.js"></script> 
-    <script src="class_admin.html"></script> 
+    <script src="class_admin.js"></script> 
 </body>
 
 </html>
